--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="DDtQuhGses2dbnFX56XFlh41x4ftvc-ePlzjb3BqipI" />
   <meta charset="UTF-8">
   <meta name="description" content="Moneyfarmltd.com scam review. Learn why this unlicensed broker is defrauding novice traders and investors.">
   <meta name="keywords" content="Moneyfarmltd.com scam, Moneyfarmltd.com legit, Moneyfarmltd.com reviews, Moneyfarmltd.com review, is Moneyfarmltd.com scam or legit, Moneyfarmltd.com">
